# skyloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
skyloader/: __init__.py  __version__.py  drive.py  folder_google.py  folder_sharepoint.py  loader_base.py  loader_manager.py  loader_postgres.py  loader_sql_server.py  utils.py
skyloader/test/: test_datafile.py
src/: __init__.py  config.py  datafile.py  drive.py  loader_manager.py  loader_postgres.py  loader_sql_server.py  mode.py
