[build-system]
requires = ["flit_core >=3.6,<6"]
build-backend = "flit_core.buildapi"

[project]
name = "skyloader"
version = "0.1"
description = "Opinionated Python data ingest framework for loading Cloud drive files to a target database"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["etl", "postgresql", "google drive", "gdrive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["numpy", "pandas", "requests"]

[project.optional-dependencies]
gdrive = [
  "google-api-core",
  "google-api-python-client",
  "google-auth",
  "googleapis-common-protos",
]
devel = ["pytest"]

[project.urls]
documentation = "https://github.com/sparkfish/skyloader/blob/dev/README.md"
repository = "https://github.com/sparkfish/skyloader.git"

[tool.mypy]
files = "skyloader/*.py"
exclude = "^tests"
mypy_path = "./stubs"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
implicit_reexport = true
strict_equality = true


[tool.black]
include = '\.pyi?$'
exclude = "venv"

[tool.ruff]
select = [
  # pycodestyle error
  "E",
  # pyflakes
  "F",
  # isort
  "I",
]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["skyloader"]

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]
markers = []

deploy = ["flit==3.9.0"]
